# covid-project

./: .dvcignore  .gitignore  Expression.dvc  FA.dvc  README.md  Tracks.dvc  data.dvc  pyproject.toml
Annots/: .gitignore  DMPsInAllStudiesAnnots.csv.dvc  DMPsNonCovVsCoVAnnots.csv.dvc  DMPsNonCovVsHBAnnots.csv.dvc
Files/: CoVvsNoNCoVDEGs.csv  CoVvsNoNCoVDEGs_with_PARP.csv  DMGenesCoVvsNoNCoV.csv  DMGenesCoVvsNoNCoVCorrected.csv  DMGenesInAllCoVGroups.csv  DMGenesInAllCoVGroupsCorrected.csv  DMPsInAllCoVGroup  DMPsInAllCoVGroupsTSS.csv
Notebooks/: 44CpGs.ipynb  Annotations.ipynb  Annotations_C.ipynb  CFC.ipynb  CFC_C.ipynb  CFC_Impact.ipynb  CF_Stats.ipynb  COVID_specific_DMPs.ipynb  COVID_specific_DMPs_visualization.ipynb  COVID_vs_HC.ipynb  COVID_vs_HC_DMPs_visualization.ipynb  CTH.ipynb  CTH_stats.ipynb  ChromosomeLlocalisation.ipynb  ChromosomeLocalisation_C.ipynb  CoVSpecifcDMG_C.ipynb  CoVSpecifcDMPs.ipynb  CoVSpecifcGenes.ipynb  Correlated_CpGs.ipynb  DEG_CoV_vs_OI_identification.ipynb  DEG_nonICU_vs_ICU_identification.ipynb  DMPs_Hosp_notHosp_Healthy.ipynb  DMPs_Overlap_Analysis.ipynb  DifferentialExpressionAnalysis_with_PARP.ipynb  Differential_Expression_Analysis_with_PARP.ipynb  EA.ipynb  EA_C.ipynb  ExpressionAnalysis.ipynb  ExpressionAnalysis_C.ipynb  ExpressionClustering_with_PARP.ipynb  Expression_Clustering_with_PARP.ipynb  Expression_Plots_COV_ICU_nonICU.ipynb  Extended_DMPs_visualization.ipynb  Extraction.ipynb  Files_Preparation.ipynb  GenesCorrelation.ipynb  Genes_Correlation.ipynb  Hospitalization_NonHospitalization.ipynb  ICU-Promotors.ipynb  (+23 more)
(+45 files in other folders)
