[tool.poetry]
name = "covid-project"
version = "0.1.0"
description = ""
authors = ["Jan Bińkowski"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
numpy = "^1.21.1"
ipython = "^7.26.0"
scipy = "^1.7.1"
sklearn = "^0.0"
pandas = "^1.3.1"
plotly = "^5.1.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
nb-black = "^1.0.7"
jupyterlab = "^3.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
