[tool.poetry]
name = "Covid-19-project"
version = "0.1.0"
description = "Covid-19 data analysis."
authors = ["Jan Bińkowski"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
ipython = "^7.26.0"
sklearn = "^0.0"
pandas = "^1.3.1"
plotly = "^5.1.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
venn = "^0.1.3"
tqdm = "^4.62.0"
statsmodels = "^0.12.2"
ipykernel = "^6.4.2"
scipy = "1.7.1"
umap-learn = "^0.5.2"
pyarrow = "^6.0.1"
openpyxl = "^3.0.9"
psutil = "^5.8.0"
fastcluster = "^1.2.4"
GEOparse = "^2.0.3"
ipywidgets = "^7.6.5"

[tool.poetry.dev-dependencies]
nb-black = "^1.0.7"
jupyterlab = "^3.1.4"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

